Restore compatibility with Laravel 5.5

--- a/composer.json
+++ b/composer.json
@@ -29,8 +29,7 @@
   "require": {
     "php": ">=7.0",
     "composer/installers": "~1.0",
-    "rainlab/user-plugin": "~1.0",
-    "tymon/jwt-auth": "~0.5|^1.0"
+    "tymon/jwt-auth": "1.0.0-rc.1"
   },
   "minimum-stability": "dev",
   "prefer-stable": true
